added projects and footer

--- a/index.html
+++ b/index.html
@@ -62,6 +62,65 @@
         </div>
     </section>
 
+    <section class="projects p-60-100 text-center">
+        <h2>Recent Work</h2>
+        <div class="project-container">
+            <a href="https:\\dictionwex.netlify.app" target="_blank">
+                <img src="./Asset/img-1.png" alt="">
+                <div class="project-title-container">
+                    <div class="project-title-container--1">
+                        <span class="project-title">Dictionary App</span>
+                        <span class="arrow">&rarr;</span>
+                    </div>
+                    <span></span>
+                </div>
+            </a>
+            <a href="https:\\daniwexportfolio.netlify.app" target="_blank">
+                <img src="./Asset/img-2.svg" alt="">
+                <div class="project-title-container">
+                    <div class="project-title-container--1">
+                        <span class="project-title">Mini portfolio</span>
+                        <span class="arrow">&rarr;</span>
+                    </div>
+                </div>
+            </a>
+            <a href="https:\\planet-fact-wex.netlify.app" target="_blank">
+                <img src="./Asset/img-5.png" alt="">
+                <div class="project-title-container">
+                    <div class="project-title-container--1">
+                        <span class="project-title">Planet's Facts</span>
+                        <span class="arrow">&rarr;</span>
+                    </div>
+                </div>
+            </a>
+            <a href="https:\\daniwex-todo-app.netlify.app" target="_blank">
+                <img src="./Asset/img-2-1.png" alt="">
+                <div class="project-title-container">
+                    <div class="project-title-container--1">
+                        <span class="project-title">To-do App</span>
+                        <span class="arrow">&rarr;</span>
+                    </div>
+                </div>
+            </a>
+        </div>
+    </section>
+
+    <footer>
+        <div class="flex justify-space-between">
+            <span id="year"></span>
+            <span>Back to Top</span>
+        </div>
+        <div class="center-text">
+            <h1 class="lg-text center-text"><a href="mailto:adenikinjudaniel@gmail.com">LET'S - TALK</a></h1>
+        </div>
+        <div class="links">
+            <a href="" class="link"></a>
+            <a href="" class="link"></a>
+            <a href="" class="link"></a>
+            <a href="" class="link"></a>
+        </div>
+    </footer>
+    <script src="./script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
     <script>
         let typed = new Typed("#text", {
