--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Daniwex website</title>
 </head>
 
@@ -111,13 +112,13 @@
             <span>Back to Top</span>
         </div>
         <div class="center-text">
-            <h1 class="lg-text center-text"><a href="mailto:adenikinjudaniel@gmail.com">LET'S - TALK</a></h1>
+            <h1 class="lg-text center-text" id="mail"><a href="mailto:adenikinjudaniel@gmail.com">LET'S - TALK</a></h1>
         </div>
         <div class="links">
-            <a href="" class="link"></a>
-            <a href="" class="link"></a>
-            <a href="" class="link"></a>
-            <a href="" class="link"></a>
+            <a href="https://instagram.com/ni_kinju" target="_blank" class="link"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://github.com/daniwex" target="_blank" class="link"><i class="fa-brands fa-github"></i></a>
+            <a href="https://linkedin.com/in/adenikinju-daniel-63b346193" target="_blank" class="link"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://codepen.io/daniwex" target="_blank" class="link"><i class="fa-brands fa-codepen"></i></a>
         </div>
     </footer>
     <script src="./script.js"></script>
