--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header>
+    <header id="home">
         <nav>
             <div class="icon">
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="logo"
@@ -109,7 +109,7 @@
     <footer>
         <div class="flex justify-space-between">
             <span id="year"></span>
-            <span>Back to Top</span>
+            <a id="gohome" href="#home">Back to Top</a>
         </div>
         <div class="center-text">
             <h1 class="lg-text center-text" id="mail"><a href="mailto:adenikinjudaniel@gmail.com">LET'S - TALK</a></h1>
