removed images for text

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <h2>Recent Work</h2>
         <div class="project-container">
             <a href="https:\\dictionwex.netlify.app" target="_blank">
-                <img src="./Asset/img-1.png" alt="">
+                <span class="number">1</span>
                 <div class="project-title-container">
                     <div class="project-title-container--1">
                         <span class="project-title">Dictionary App</span>
@@ -77,7 +77,7 @@
                 </div>
             </a>
             <a href="https:\\daniwexportfolio.netlify.app" target="_blank">
-                <img src="./Asset/img-2.svg" alt="">
+                <span class="number">2</span>
                 <div class="project-title-container">
                     <div class="project-title-container--1">
                         <span class="project-title">Mini portfolio</span>
@@ -86,7 +86,7 @@
                 </div>
             </a>
             <a href="https:\\planet-fact-wex.netlify.app" target="_blank">
-                <img src="./Asset/img-5.png" alt="">
+                <span class="number">3</span>
                 <div class="project-title-container">
                     <div class="project-title-container--1">
                         <span class="project-title">Planet's Facts</span>
@@ -95,7 +95,7 @@
                 </div>
             </a>
             <a href="https:\\daniwex-todo-app.netlify.app" target="_blank">
-                <img src="./Asset/img-2-1.png" alt="">
+                <span class="number">4</span>
                 <div class="project-title-container">
                     <div class="project-title-container--1">
                         <span class="project-title">To-do App</span>
