--- a/index.html
+++ b/index.html
@@ -1,140 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Daniwex website</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header id="home">
-        <nav>
-            <div class="icon">
-                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="logo"
-                    zoomAndPan="magnify" viewBox="0 0 375 374.999991" preserveAspectRatio="xMidYMid meet" version="1.0">
-                    <defs>
-                        <g />
-                    </defs>
-                    <g fill-opacity="1">
-                        <g transform="translate(89.508522, 202.777179)">
-                            <g>
-                                <path
-                                    d="M 80.058594 -60.003906 L 80.058594 -59.660156 C 84.859375 -58.628906 88.03125 -57.171875 85.117188 -49.714844 L 68.574219 -7.199219 L 52.542969 -49.714844 C 49.628906 -57.34375 52.972656 -59.144531 58.972656 -59.660156 L 58.972656 -60.003906 L 34.714844 -60.003906 C 36 -58.886719 37.628906 -56.402344 38.488281 -54.171875 L 46.289062 -34.117188 L 35.574219 -7.199219 L 19.542969 -49.714844 C 16.628906 -57.34375 19.972656 -59.144531 25.972656 -59.660156 L 25.972656 -60.003906 L 1.714844 -60.003906 C 3 -58.886719 4.628906 -56.402344 5.484375 -54.171875 L 27.085938 1.457031 L 26.828125 3.257812 L 35.746094 -2.914062 L 47.230469 -31.628906 L 60.089844 1.457031 L 59.832031 3.257812 L 68.746094 -2.914062 L 87.003906 -49.628906 C 89.917969 -57.085938 92.230469 -58.628906 95.832031 -59.660156 L 95.832031 -60.003906 Z M 80.058594 -60.003906 " />
-                            </g>
-                        </g>
-                    </g>
-                    <g fill-opacity="1">
-                        <g transform="translate(187.047506, 202.777179)">
-                            <g>
-                                <path
-                                    d="M 54.34375 -18.257812 C 47.316406 -6.773438 41.914062 -1.371094 30.859375 -1.371094 L 19.542969 -1.371094 L 19.542969 -29.316406 L 26.742188 -29.316406 C 37.371094 -29.316406 41.402344 -27 43.457031 -19.199219 L 43.457031 -40.886719 C 41.402344 -33 37.371094 -30.6875 26.742188 -30.6875 L 19.542969 -30.6875 L 19.542969 -58.628906 L 30.34375 -58.628906 C 41.402344 -58.628906 44.746094 -54.34375 51.257812 -44.746094 L 51.601562 -44.914062 L 48.429688 -60.003906 L 1.285156 -60.003906 L 1.285156 -59.574219 C 4.800781 -59.144531 7.800781 -58.203125 7.800781 -55.117188 L 7.800781 -6.601562 C 7.800781 -3.515625 4.800781 -1.714844 1.285156 -0.429688 L 1.285156 0 L 46.714844 0 L 49.628906 1.886719 L 50.144531 0 L 54.6875 -18.085938 Z M 54.34375 -18.257812 " />
-                            </g>
-                        </g>
-                    </g>
-                    <g fill-opacity="1">
-                        <g transform="translate(243.016709, 202.777179)">
-                            <g>
-                                <path
-                                    d="M 53.660156 -9.257812 L 36.6875 -34.03125 L 50.832031 -51.257812 C 55.460938 -56.832031 58.375 -58.628906 63.089844 -59.660156 L 63.089844 -60.003906 L 43.886719 -60.003906 L 43.886719 -59.660156 C 49.460938 -58.800781 53.316406 -57.003906 48.601562 -51.34375 L 35.660156 -35.574219 L 24.257812 -52.203125 L 19.542969 -60.003906 L 2.570312 -60.003906 L 2.570312 -59.660156 C 5.398438 -59.144531 8.316406 -57.085938 11.65625 -52.203125 L 28.714844 -27.257812 L 13.542969 -8.742188 C 8.914062 -3.171875 6 -1.371094 1.285156 -0.34375 L 1.285156 0 L 20.488281 0 L 20.488281 -0.34375 C 14.914062 -1.199219 11.058594 -3 15.773438 -8.65625 L 29.828125 -25.714844 L 41.058594 -9.257812 L 46.714844 0 L 63.171875 0 L 63.171875 -0.34375 C 60.257812 -1.113281 56.917969 -4.457031 53.660156 -9.257812 Z M 53.660156 -9.257812 " />
-                            </g>
-                        </g>
-                    </g>
-                </svg>
-            </div>
-            <ul class="nav-link">
-                <li><a href="">Home</a></li>
-                <li><a href="">projects</a></li>
-                <li><a href="">contact</a></li>
-            </ul>
-        </nav>
+      <nav>
+        <div class="icon">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            class="logo"
+            zoomAndPan="magnify"
+            viewBox="0 0 375 374.999991"
+            preserveAspectRatio="xMidYMid meet"
+            version="1.0"
+          >
+            <defs>
+              <g />
+            </defs>
+            <g fill-opacity="1">
+              <g transform="translate(89.508522, 202.777179)">
+                <g>
+                  <path
+                    d="M 80.058594 -60.003906 L 80.058594 -59.660156 C 84.859375 -58.628906 88.03125 -57.171875 85.117188 -49.714844 L 68.574219 -7.199219 L 52.542969 -49.714844 C 49.628906 -57.34375 52.972656 -59.144531 58.972656 -59.660156 L 58.972656 -60.003906 L 34.714844 -60.003906 C 36 -58.886719 37.628906 -56.402344 38.488281 -54.171875 L 46.289062 -34.117188 L 35.574219 -7.199219 L 19.542969 -49.714844 C 16.628906 -57.34375 19.972656 -59.144531 25.972656 -59.660156 L 25.972656 -60.003906 L 1.714844 -60.003906 C 3 -58.886719 4.628906 -56.402344 5.484375 -54.171875 L 27.085938 1.457031 L 26.828125 3.257812 L 35.746094 -2.914062 L 47.230469 -31.628906 L 60.089844 1.457031 L 59.832031 3.257812 L 68.746094 -2.914062 L 87.003906 -49.628906 C 89.917969 -57.085938 92.230469 -58.628906 95.832031 -59.660156 L 95.832031 -60.003906 Z M 80.058594 -60.003906 "
+                  />
+                </g>
+              </g>
+            </g>
+            <g fill-opacity="1">
+              <g transform="translate(187.047506, 202.777179)">
+                <g>
+                  <path
+                    d="M 54.34375 -18.257812 C 47.316406 -6.773438 41.914062 -1.371094 30.859375 -1.371094 L 19.542969 -1.371094 L 19.542969 -29.316406 L 26.742188 -29.316406 C 37.371094 -29.316406 41.402344 -27 43.457031 -19.199219 L 43.457031 -40.886719 C 41.402344 -33 37.371094 -30.6875 26.742188 -30.6875 L 19.542969 -30.6875 L 19.542969 -58.628906 L 30.34375 -58.628906 C 41.402344 -58.628906 44.746094 -54.34375 51.257812 -44.746094 L 51.601562 -44.914062 L 48.429688 -60.003906 L 1.285156 -60.003906 L 1.285156 -59.574219 C 4.800781 -59.144531 7.800781 -58.203125 7.800781 -55.117188 L 7.800781 -6.601562 C 7.800781 -3.515625 4.800781 -1.714844 1.285156 -0.429688 L 1.285156 0 L 46.714844 0 L 49.628906 1.886719 L 50.144531 0 L 54.6875 -18.085938 Z M 54.34375 -18.257812 "
+                  />
+                </g>
+              </g>
+            </g>
+            <g fill-opacity="1">
+              <g transform="translate(243.016709, 202.777179)">
+                <g>
+                  <path
+                    d="M 53.660156 -9.257812 L 36.6875 -34.03125 L 50.832031 -51.257812 C 55.460938 -56.832031 58.375 -58.628906 63.089844 -59.660156 L 63.089844 -60.003906 L 43.886719 -60.003906 L 43.886719 -59.660156 C 49.460938 -58.800781 53.316406 -57.003906 48.601562 -51.34375 L 35.660156 -35.574219 L 24.257812 -52.203125 L 19.542969 -60.003906 L 2.570312 -60.003906 L 2.570312 -59.660156 C 5.398438 -59.144531 8.316406 -57.085938 11.65625 -52.203125 L 28.714844 -27.257812 L 13.542969 -8.742188 C 8.914062 -3.171875 6 -1.371094 1.285156 -0.34375 L 1.285156 0 L 20.488281 0 L 20.488281 -0.34375 C 14.914062 -1.199219 11.058594 -3 15.773438 -8.65625 L 29.828125 -25.714844 L 41.058594 -9.257812 L 46.714844 0 L 63.171875 0 L 63.171875 -0.34375 C 60.257812 -1.113281 56.917969 -4.457031 53.660156 -9.257812 Z M 53.660156 -9.257812 "
+                  />
+                </g>
+              </g>
+            </g>
+          </svg>
+        </div>
+        <ul class="nav-link">
+          <li><a href="">Home</a></li>
+          <li><a href="#project">projects</a></li>
+          <li><a href="#contact">contact</a></li>
+        </ul>
+      </nav>
     </header>
     <section class="pt-40">
-        <div class="w-70">
-            <h1>Hi I'm daniel a </h1><span id="text"></span>
-            <p class="pt-3 pb-2 fh-2 border-b fw-light">
-                I am firstly a dedicated front-end developer with a keen eye for
-                design and a passion for crafting engaging user experiences. I
-                specialize in translating complex ideas and designs into elegant,
-                intuitive, and responsive websites.
-            </p>
-        </div>
+      <div class="w-70">
+        <h1>Hi I'm daniel a</h1>
+        <span id="text"></span>
+        <p class="pt-3 pb-2 fh-2 border-b fw-light">
+          I am firstly a dedicated front-end developer with a keen eye for
+          design and a passion for crafting engaging user experiences. I
+          specialize in translating complex ideas and designs into elegant,
+          intuitive, and responsive websites.
+        </p>
+      </div>
     </section>
 
-    <section class="projects p-60-100 text-center">
-        <h2>Recent Work</h2>
-        <div class="project-container">
-            <a href="https:\\dictionwex.netlify.app" target="_blank">
-                <span class="number">1</span>
-                <div class="project-title-container">
-                    <div class="project-title-container--1">
-                        <span class="project-title">Dictionary App</span>
-                        <span class="arrow">&rarr;</span>
-                    </div>
-                    <span></span>
-                </div>
-            </a>
-            <a href="https:\\daniwexportfolio.netlify.app" target="_blank">
-                <span class="number">2</span>
-                <div class="project-title-container">
-                    <div class="project-title-container--1">
-                        <span class="project-title">Mini portfolio</span>
-                        <span class="arrow">&rarr;</span>
-                    </div>
-                </div>
-            </a>
-            <a href="https:\\planet-fact-wex.netlify.app" target="_blank">
-                <span class="number">3</span>
-                <div class="project-title-container">
-                    <div class="project-title-container--1">
-                        <span class="project-title">Planet's Facts</span>
-                        <span class="arrow">&rarr;</span>
-                    </div>
-                </div>
-            </a>
-            <a href="https:\\daniwex-todo-app.netlify.app" target="_blank">
-                <span class="number">4</span>
-                <div class="project-title-container">
-                    <div class="project-title-container--1">
-                        <span class="project-title">To-do App</span>
-                        <span class="arrow">&rarr;</span>
-                    </div>
-                </div>
-            </a>
-        </div>
+    <section class="projects p-60-100 text-center" id="project">
+      <h2>Recent Work</h2>
+      <div class="project-container">
+        <a href="https:\\dictionwex.netlify.app" target="_blank">
+          <span class="number">1</span>
+          <div class="project-title-container">
+            <div class="project-title-container--1">
+              <span class="project-title">Dictionary App</span>
+              <span class="arrow">&rarr;</span>
+            </div>
+            <span class="status">completed</span>
+          </div>
+        </a>
+        <a href="https:\\daniwexportfolio.netlify.app" target="_blank">
+          <span class="number">2</span>
+          <div class="project-title-container">
+            <div class="project-title-container--1">
+              <span class="project-title">Mini portfolio</span>
+              <span class="arrow">&rarr;</span>
+            </div>
+            <span class="status">completed</span>
+          </div>
+        </a>
+        <a href="https:\\planet-fact-wex.netlify.app" target="_blank">
+          <span class="number">3</span>
+          <div class="project-title-container">
+            <div class="project-title-container--1">
+              <span class="project-title">Planet's Facts</span>
+              <span class="arrow">&rarr;</span>
+            </div>
+            <span class="status">completed</span>
+          </div>
+        </a>
+        <a href="https:\\daniwex-todo-app.netlify.app" target="_blank">
+          <span class="number">4</span>
+          <div class="project-title-container">
+            <div class="project-title-container--1">
+              <span class="project-title">To-do App</span>
+              <span class="arrow">&rarr;</span>
+            </div>
+            <span class="status">completed</span>
+          </div>
+        </a>
+        <a href="https:\\browser-markdown.netlify.app/" target="_blank">
+          <span class="number">5</span>
+          <div class="project-title-container">
+            <div class="project-title-container--1">
+              <span class="project-title">In-browser Editor</span>
+              <span class="arrow">&rarr;</span>
+            </div>
+            <span class="status ncomplete">in-progress</span>
+          </div>
+        </a>
+      </div>
     </section>
 
     <footer>
-        <div class="flex justify-space-between">
-            <span id="year"></span>
-            <a id="gohome" href="#home">Back to Top</a>
-        </div>
-        <div class="center-text">
-            <h1 class="lg-text center-text" id="mail"><a href="mailto:adenikinjudaniel@gmail.com">LET'S - TALK</a></h1>
-        </div>
-        <div class="links">
-            <a href="https://instagram.com/ni_kinju" target="_blank" class="link"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://github.com/daniwex" target="_blank" class="link"><i class="fa-brands fa-github"></i></a>
-            <a href="https://linkedin.com/in/adenikinju-daniel-63b346193" target="_blank" class="link"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="https://codepen.io/daniwex" target="_blank" class="link"><i class="fa-brands fa-codepen"></i></a>
-        </div>
+      <div class="flex justify-space-between" id="contact">
+        <span id="year"></span>
+        <a id="gohome" href="#home">Back to Top</a>
+      </div>
+      <div class="center-text">
+        <h1 class="lg-text center-text" id="mail">
+          <a href="mailto:adenikinjudaniel@gmail.com">LET'S - TALK</a>
+        </h1>
+      </div>
+      <div class="links">
+        <a href="https://instagram.com/ni_kinju" target="_blank" class="link"
+          ><i class="fa-brands fa-instagram"></i
+        ></a>
+        <a href="https://github.com/daniwex" target="_blank" class="link"
+          ><i class="fa-brands fa-github"></i
+        ></a>
+        <a
+          href="https://linkedin.com/in/adenikinju-daniel-63b346193"
+          target="_blank"
+          class="link"
+          ><i class="fa-brands fa-linkedin"></i
+        ></a>
+        <a href="https://codepen.io/daniwex" target="_blank" class="link"
+          ><i class="fa-brands fa-codepen"></i
+        ></a>
+      </div>
     </footer>
     <script src="./script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
     <script>
-        let typed = new Typed("#text", {
-            strings: [
-                "Web Developer.",
-                "Software Developer.",
-                "Front-end Developer.",
-            ],
-            typeSpeed: 100,
-            backSpeed: 100,
-            loop: true,
-        });
+      let typed = new Typed("#text", {
+        strings: [
+          "Web Developer.",
+          "Software Developer.",
+          "Front-end Developer.",
+        ],
+        typeSpeed: 100,
+        backSpeed: 100,
+        loop: true,
+      });
     </script>
-</body>
-
+  </body>
 </html>
