added memory game

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <section class="projects p-60-100 text-center" id="project">
       <h2>Recent Work</h2>
       <div class="project-container">
-        <a href="https:\\dictionwex.netlify.app" target="_blank">
+        <a href="https://dictionwex.netlify.app" target="_blank">
           <span class="number">1</span>
           <div class="project-title-container">
             <div class="project-title-container--1">
@@ -92,7 +92,7 @@
             <span class="status">completed</span>
           </div>
         </a>
-        <a href="https:\\daniwexportfolio.netlify.app" target="_blank">
+        <a href="https://daniwexportfolio.netlify.app" target="_blank">
           <span class="number">2</span>
           <div class="project-title-container">
             <div class="project-title-container--1">
@@ -102,7 +102,7 @@
             <span class="status">completed</span>
           </div>
         </a>
-        <a href="https:\\planet-fact-wex.netlify.app" target="_blank">
+        <a href="https://planet-fact-wex.netlify.app" target="_blank">
           <span class="number">3</span>
           <div class="project-title-container">
             <div class="project-title-container--1">
@@ -112,7 +112,7 @@
             <span class="status">completed</span>
           </div>
         </a>
-        <a href="https:\\daniwex-todo-app.netlify.app" target="_blank">
+        <a href="https://daniwex-todo-app.netlify.app" target="_blank">
           <span class="number">4</span>
           <div class="project-title-container">
             <div class="project-title-container--1">
@@ -122,11 +122,21 @@
             <span class="status">completed</span>
           </div>
         </a>
-        <a href="https:\\browser-markdown.netlify.app/" target="_blank">
+        <a href="https://browser-markdown.netlify.app/" target="_blank">
           <span class="number">5</span>
           <div class="project-title-container">
             <div class="project-title-container--1">
               <span class="project-title">In-browser Editor</span>
+              <span class="arrow">&rarr;</span>
+            </div>
+            <span class="status ncomplete">in-progress</span>
+          </div>
+        </a>
+        <a href="https://mermorygame.netlify.app/" target="_blank">
+          <span class="number">6</span>
+          <div class="project-title-container">
+            <div class="project-title-container--1">
+              <span class="project-title">Memory Game</span>
               <span class="arrow">&rarr;</span>
             </div>
             <span class="status ncomplete">in-progress</span>
