added new project

--- a/index.html
+++ b/index.html
@@ -142,6 +142,16 @@
             <span class="status ncomplete">in-progress</span>
           </div>
         </a>
+        <a href="https://maker-launcher.netlify.app/" target="_blank">
+          <span class="number">7</span>
+          <div class="project-title-container">
+            <div class="project-title-container--1">
+              <span class="project-title">Maker Launcher</span>
+              <span class="arrow">&rarr;</span>
+            </div>
+            <span class="status ncomplete">in-progress</span>
+          </div>
+        </a>
       </div>
     </section>
 
