added link sharing app

--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@
             <span class="status ncomplete">in-progress</span>
           </div>
         </a>
-        <a href="https://maker-launcher.netlify.app/" target="_blank">
+        <a href="https://share-links.netlify.app/" target="_blank">
           <span class="number">7</span>
           <div class="project-title-container">
             <div class="project-title-container--1">
-              <span class="project-title">Maker Launcher</span>
+              <span class="project-title">Link-sharing App</span>
               <span class="arrow">&rarr;</span>
             </div>
             <span class="status ncomplete">in-progress</span>
