added new project

--- a/index.html
+++ b/index.html
@@ -152,6 +152,16 @@
             <span class="status ncomplete">in-progress</span>
           </div>
         </a>
+        <a href="https://feedback-wex-app.netlify.app/" target="_blank">
+          <span class="number">8</span>
+          <div class="project-title-container">
+            <div class="project-title-container--1">
+              <span class="project-title">Feedback App</span>
+              <span class="arrow">&rarr;</span>
+            </div>
+            <span class="status ncomplete">in-progress</span>
+          </div>
+        </a>
       </div>
     </section>
 
