modified project link

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <span class="status ncomplete">in-progress</span>
           </div>
         </a>
-        <a href="https://feedback-wex-app.netlify.app/" target="_blank">
+        <a href="https://feedback-wex.netlify.app/" target="_blank">
           <span class="number">8</span>
           <div class="project-title-container">
             <div class="project-title-container--1">
