--- a/index.html
+++ b/index.html
@@ -162,6 +162,16 @@
             <span class="status ncomplete">in-progress</span>
           </div>
         </a>
+        <a href="https://invoice-app-wex.netlify.app/" target="_blank">
+          <span class="number">9</span>
+          <div class="project-title-container">
+            <div class="project-title-container--1">
+              <span class="project-title">Invoice App</span>
+              <span class="arrow">&rarr;</span>
+            </div>
+            <span class="status ncomplete">in-progress</span>
+          </div>
+        </a>
       </div>
     </section>
 
