new project added

--- a/index.html
+++ b/index.html
@@ -192,6 +192,16 @@
             <span class="status ncomplete">in-progress</span>
           </div>
         </a>
+        <a href="https://daniwex-ticket-gen.netlify.app/" target="_blank">
+          <span class="number">12</span>
+          <div class="project-title-container">
+            <div class="project-title-container--1">
+              <span class="project-title">Ticket Generator App</span>
+              <span class="arrow">&rarr;</span>
+            </div>
+            <span class="status ncomplete">in-progress</span>
+          </div>
+        </a>
       </div>
     </section>
 
