--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
           "Web Developer.",
           "Software Developer.",
           "Front-end Developer.",
+          "Android Developer"
         ],
         typeSpeed: 100,
         backSpeed: 100,
